--- a/3DexhbitionRoom/pack/csspack/style.css
+++ b/3DexhbitionRoom/pack/csspack/style.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: #ffffff;
+    background-color: #00ffff;
     backdrop-filter: blur(0);
     border-radius: 0;
   }
@@ -22,7 +22,8 @@
     left: 10vw;
     height: 80vh;
     width: 80vw;
-    backdrop-filter: blur(14px);
+    backdrop-filter: blur(18px);
+    background-color: rgba(0, 0, 0, 0.3);
     border: 2px solid rgba(255, 255, 255, 0.5);
   }
 }
