--- a/3DexhbitionRoom/pack/csspack/style.less
+++ b/3DexhbitionRoom/pack/csspack/style.less
@@ -38,7 +38,7 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(0, 255, 255);
         backdrop-filter: blur(0);
         border-radius: 0;
     }
@@ -56,7 +56,8 @@
         left: 10vw;
         height: 80vh;
         width: 80vw;
-        backdrop-filter: blur(14px);
+        backdrop-filter: blur(18px);
+        background-color: rgba(0,0,0,0.3);
         .basicBorder();
     }
 }
